--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,15 +1,28 @@
 
   
   /* Footer */
-  footer {
-    background-color: var(--card_gray);
-    padding: 10px;
-    color: white;
-    text-align: center;
+  .footer {
+    background: #e9e9e9;
+   font-family: 'Roboto', sans-serif;
+   text-align: center;
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
   }
   
-  footer p {
-    margin-bottom: 0;
+  .footer span {
+    color: #666;
+    font-size: 12px;
+    display: block;
+    position: absolute;
+    bottom: 10px;
+    position: absolute;
+    width: 90%;
+    left: 50%;
+    top: 45%;
+    bottom: auto;
+    right: auto;
+    transform: translateX(-50%) translateY(-50%);
+    text-align: center;
   }
   
   .credits-text {
