--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,11 +1,12 @@
 #pokedex-header{
+  display: flex;
+  justify-content: center;
   position: relative;
   margin: 0;
   padding: 0 20px;
   height: 45px;
-  background: #616161;
+  background: #393838;
   text-align: left;
-  border-bottom: 1px solid #212121;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
