--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,23 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap');
 
+:root {
+  /** COLOR PALETTE **/
+  --backgroung: rgba(248, 249, 250, 1)
+  --blue: rgba(56, 96, 170, 1)
+  --blue-light: rgba(56, 96, 170, 0.3)
+  --yellow: rgba(253, 216, 93, 1)
+  --yellow-light: rgba(253, 216, 93, 0.5)
+  --red: rgba(241, 75, 61, 1)
+  --red-light: rgba(241, 75, 61, 0.5)
+  --green: rgba(96, 211, 148, 1)
+  --green-light: rgba(96, 211, 148, 0.5)
+  --card: rgba(217, 217, 217, 0.4)
+  /* --card: #D9D9D9 */
+}
 *
+
+
 {
     box-sizing: border-box;
 }
@@ -57,44 +74,10 @@ body
 
 .type-dragon { --color: #F9BE00; }
 
-/*
-    Background Pokeball decoration
-*/
-.bg-pokeball
-{
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    right: -10px;
-    bottom: -10px;
-    font-size: 10px;
-    color: rgba( 255,255,255,.2 );
-}
 
-.bg-pokeball::before, .bg-pokeball::after
-{
-    display: block;
-    border-radius: 100%;
-}
-
-.bg-pokeball::before
-{
-    content: '';
-    position: relative;
-    width: 10em;
-    padding-bottom: 10em;
-    border: 4em solid currentColor;
-    clip-path: polygon( 0 0, 0 40%, 50% 40%, 50% 60%, 0 60%, 0 100%, 100% 100%, 100% 60%, 50% 60%, 50% 40%, 100% 40%, 100% 0 );
-}
-
-.bg-pokeball::after
-{
-    content: '';
-    position: absolute;
-    width: 5em;
-    padding-bottom: 5em;
-    background-color: currentColor;
+.inter-bold{
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
 }
 
 
