--- a/src/components/Card/PoketCard.css
+++ b/src/components/Card/PoketCard.css
@@ -1,54 +1,108 @@
-.content-card{
-    margin-top: 50px;
-    position: relative;
-    width: 200px;
-    height: 190px;
-    background-color: var(--card);
-    border-radius: 20px;
+.cardP-container
+{
+    padding: 1rem;
+    height: 100%;
     cursor: pointer;
-    transition: all 0.3s ease-in;
-}
-.content-card:hover img{
-    /* transform: scale3d(1.2, 1.2, 5); */
-    transform: translateY(-6px);
 }
 
-.fig-card{
-    position: absolute;
-    left: 50%;
-    top: -50px;
-    transform: translateX(-50%);
-    width: 150px;
-    height: 150px;
-    border-radius: 20px;
-    /* background-color: var(--card);
-    box-shadow: 0 15px 50px rgba(0, 0, 0, 0.35); 
-    overflow: hidden*/
-}
-
-.fig-card img{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
+.cardP
+{
+    background-color: var( --color );
+    color: #FFF;
+    box-shadow: 0 0 20px 0 var( --color );
+    border-radius: 3rem;
+    overflow: hidden;
     height: 100%;
-    transition: all 0.3s ease-in;
-    /* box-shadow: 0px 30px 15px -6px rgba(0, 0, 0, 0.1); */
-    /* object-fit: cover; */
-}
-.inf-card{
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    padding: 3rem 1rem 3rem 3rem;
+    position: relative;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
     align-items: center;
-    padding-bottom: 20px;
-    text-align: center;
+    justify-content: space-between;
+    will-change: box-shadow, transform;
+    transition: .3s all;
 }
 
-.name-card{
-    font-size: 28px;
-    color: var(--blue);
+.cardP .cardP-title
+{
+    align-self: flex-start;
+}
+
+.cardP .cardP-title h2
+{
+    text-transform: capitalize;
+    margin: 0;
+    font-size: 2rem;
+}
+
+.cardP .cardP-title .pokemon-types
+{
+    margin-top: 1rem;
+}
+
+.cardP .cardP-title span.type
+{
+    border-radius: 100rem;
+    display: table;
+    background-color: rgba( 255,255,255,.2 );
+    padding: .3rem .7rem;
+    text-align: center;
+    margin-bottom: .5rem;
+    text-transform: capitalize;
+}
+
+.cardP .pokemon-image
+{
+    align-self: flex-end;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    max-width: 50%;
+}
+
+.cardP img
+{
+    max-width: 100%;
+    max-height: 100%;
+    filter: drop-shadow( 0 0 5px rgba( 0,0,0,.2 ) );
+}
+
+.pokemon-id
+{
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    font-size: 2.5rem;
+    color: rgba( 255,255,255,.2 );
+}
+
+@media screen and ( max-width: 500px )
+{
+    :not( .details-view ) .cardP
+    {
+        align-items: flex-start;
+        justify-content: space-between;
+        height: 40vh;
+        padding: 2rem;
+    }
+
+    .cardP .cardP-title h2
+    {
+        font-size: 1.2rem;
+    }
+
+    .pokemon-id
+    {
+        font-size: 2rem;
+        top: 20px;
+        right: 20px;
+    }
+}
+
+@media screen and ( min-width: 1024px )
+{
+    .cardP:hover
+    {
+        transform: translateY( -5px );
+        box-shadow: 0 0 20px 5px var( --color );
+    }
 }
